--- a/Web_Labs/Lab05/TicTacToe/style.css
+++ b/Web_Labs/Lab05/TicTacToe/style.css
@@ -19,7 +19,7 @@ nav ul{
     list-style-type: none;
 }
 
-.gameContainer{ 
+.gameContainer{
     display: flex;
     justify-content: center;
     margin-top: 50px;
@@ -35,18 +35,38 @@ nav ul{
 
 .box{
     border: 2px solid black;
-    font-size: 8vw;
+    font-size: 6vw;
     cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
 .box:hover{
     background-color: rgb(242, 234, 250);
 }
 
+.display{
+    /*border: 2px solid;*/
+    margin-left: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 50px;
+}
+
+.display__inner{
+    /*border: 2px solid;*/
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+}
+
 .info {
+    /*margin-left: 100px;*/
     font-size: 22px;
 }
 
@@ -58,9 +78,9 @@ nav ul{
 .gameInfo h1{
     font-size: 2.5rem;
 }
-
 .imgbox img{
     width: 0;
+    /*display: none;*/
     transition: width 1s ease-in-out;
 }
 
@@ -86,13 +106,11 @@ nav ul{
     background: #f3e7f9;
     border-radius: 6px;
     cursor: pointer;
-    font-family: 'Baloo Bhaina 2';
     font-size: 15px;
     font-weight: bolder;
 }
 
 .line{
-    background-color: black;
     height: 3px;
     width: 0;
     position: absolute;
@@ -111,7 +129,7 @@ nav ul{
     .gameInfo h1{
         font-size: 1.5rem;
     }
-    .container { 
+    .container {
         grid-template-rows: repeat(3, 20vw);
         grid-template-columns: repeat(3, 20vw);
     }
